# arcgisutils

./: .Rbuildignore  .gitattributes  .gitignore  404.html  CLAUDE.html  CLAUDE.md  CRAN-SUBMISSION  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  config.status  configure  configure.ac  configure.win  cran-comments.md  index.html  index.md  justfile  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  cran-checks.yaml  pkgdown.yaml  rhub.yaml
R/: RcppExports.R  arc-auth.R  arc-base-req.R  arc-paginate-req.R  arc-token.R  arcgisutils-package.R  as-esri-geometry.R  auth-shiny.R  esri-features-list.R  esri-features-string.R  esri-featureset-list.R  esri-featureset-string.R  esri-field-mapping.R  esri-geometry.R  extendr-wrappers.R  feature-collection.R  geoprocessing-class.R  geoprocessing-types.R  geoprocessing.R  import-standalone-obj-type.R  import-standalone-types-check.R  portal-group-user-list.R  portal-resources.R  portal-self.R  portal-servers.R  portal-types.R  portal-users.R  rbind-results.R  search.R  self.R  sharing.R  user-group-content.R  user-self.R  util-parse-esri-json.R  utils-crs.R  utils-dates.R  utils-dimensions.R  utils-envelope.R  utils-geometry.R  utils-requests.R  (+4 more)
dev/: analysis.R  geoprocessing-async.R  group-content.R  hydrology.R  url-mapping.R
inst/: example-auth-shiny-calcite.R  example-auth-shiny.R
man/: arc_agent.Rd  arc_base_req.Rd  arc_form_params.Rd  arc_group.Rd  arc_group_users.Rd  arc_host.Rd  arc_item.Rd  arc_item_data.Rd  arc_job_status.Rd  arc_paginate_req.Rd  arc_portal_resources.Rd  arc_portal_servers.Rd  arc_portal_urls.Rd  arc_portal_users.Rd  arc_self_meta.Rd  arc_token.Rd  arc_url_parse.Rd  arc_user.Rd  arc_user_self.Rd  arcgisutils-package.Rd  as_arc_url.Rd  as_esri_geometry.Rd  as_extent.Rd  auth.Rd  auth_shiny.Rd  class_form_params.Rd  class_job_status.Rd  content.Rd  dates.Rd  detect_errors.Rd  determine_dims.Rd  determine_esri_geo_type.Rd  esri_geometry.Rd  features.Rd  featureset.Rd  fetch_layer_metadata.Rd  field_mapping.Rd  geoprocessing-types.Rd  gp_job.Rd  gp_job_from_url.Rd  (+13 more)
news/: index.html  index.md
reference/: arc_agent.html  arc_agent.md  arc_base_req.html  arc_base_req.md  arc_form_params.html  arc_form_params.md  arc_group.html  arc_group.md  arc_group_users.html  arc_group_users.md  arc_host.html  arc_host.md  arc_item.html  arc_item.md  arc_item_data.html  arc_item_data.md  arc_job_status.html  arc_job_status.md  arc_paginate_req.html  arc_paginate_req.md  arc_portal_resources.html  arc_portal_resources.md  arc_portal_self.html  arc_portal_servers.html  arc_portal_servers.md  arc_portal_urls.html  arc_portal_urls.md  arc_portal_users.html  arc_portal_users.md  arc_self_meta.html  arc_token.html  arc_url_parse.html  arc_user.html  arc_user.md  arc_user_content.html  arc_user_self.html  arc_user_self.md  as_esri_features.html  as_esri_featureset.html  as_esri_geometry.html  (+70 more)
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  RcppExports.cpp  arcgisutils-win.def  entrypoint.c  esri-geometry.cpp
src/rust/: Cargo.toml  vendor-config.toml  vendor.tar.xz
src/rust/src/: lib.rs  parse_json.rs  sfc.rs  sfg.rs
src/rust/src/sf_compat/: coord.rs  geometry.rs  mod.rs  multipoint.rs  point.rs  polygon.rs  polyline.rs  sfc.rs
src/rust/src/to/: attributes.rs  featureset.rs  linestring.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs
src/rust/src/to/features/: linestring.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  polygon.rs
tests/: testthat.R
tests/testthat/: test-arc-base-req.R  test-arc_token.R  test-date-handling.R  test-date-parsing.R  test-empty-results.R  test-envelope.R  test-fetch_layer_metadata.R  test-field-mapping.R  test-geoprocessing-types.R  test-json-conversions.R  test-json-na.R  test-null-geometry.R  test-rbind-results.R  test-sharing.R  test-utils-url.R
tests/testthat/_snaps/: date-parsing.md
tests/testthat/testdata/: date-parse-error.json  null-polyline.json
tools/: README.md  config.R  get-deps.R  vendor.R  vendor.md5
