[package]
name = 'arcgisutils'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'arcgisutils'

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr", features = [
    "serde",
] }
serde_esri = { git = "https://github.com/josiahparry/serde_esri" }
serde_json = "1.0.108"

[profile.release]
lto = true
