[package]
name = 'arcgisutils'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = "1.65.0"

[lib]
crate-type = ['staticlib']
name = 'arcgisutils'

[dependencies]
extendr-api = { version = "0.8.0", features = ["serde"] }
serde_esri = { git = "https://github.com/josiahparry/serde_esri" }
serde_json = "1.0.108"

[profile.release]
lto = true
codegen-units = 1
