[package]
name = "arcgisutils"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]
name = "arcgisutils"

[dependencies]
extendr-api = { version = "0.8.0", features = ["serde"] }
serde_esri = "0.5.0"
serde_json = "1.0.108"

[profile.release]
lto = true
codegen-units = 1
